Add lszip example

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,9 +1,13 @@
-all: inflate/inflate
+all: inflate/inflate lszip/lszip
 
 inflate/inflate:
 	cd inflate && make
 
-.PHONY: clean inflate/inflate
+lszip/lszip:
+	cd lszip && make
+
+.PHONY: clean inflate/inflate lszip/lszip
 
 clean:
 	cd inflate && make clean
+	cd lszip && make clean
