Add random access functions that read central dir

--- a/example/lszip/Makefile
+++ b/example/lszip/Makefile
@@ -2,7 +2,7 @@ M4FLAGS = -DSML_COMPILER=mlton
 
 all: lszip
 
-lszip: lszip.sml lszip.mlb
+lszip: lszip.sml lszip.mlb ../../binrandomaccessfile.sml ../../seqmatch.sml ../../pkzip.sml
 	mlton lszip.mlb
 
 lszip.sml: lszip.sml.in
