Add Pkzip.entries function and make lszip to use random access interface

--- a/example/lszip/lszip.sml.in
+++ b/example/lszip/lszip.sml.in
@@ -2,10 +2,10 @@ structure Main = struct
   fun main (name, arguments) =
         let
           val fileName = hd arguments
-          val files = Pkzip.openIn fileName
+          val pkzip = Pkzip.openIn' fileName
           fun println s = print (s ^ "\n")
         in
-          List.app (println o #fileName) files;
+          List.app (println o #fileName) (Pkzip.entries pkzip);
           OS.Process.success
         end
 end
