Support Deflated in readLocalFileHeader

--- a/example/catzip/Makefile
+++ b/example/catzip/Makefile
@@ -2,7 +2,7 @@ M4FLAGS = -DSML_COMPILER=mlton
 
 all: catzip
 
-catzip: catzip.sml catzip.mlb ../../binrandomaccessfile.sml ../../seqmatch.sml ../../pkzip.sml
+catzip: catzip.sml catzip.mlb ../../binrandomaccessfile.sml ../../seqmatch.sml ../../deflate.sml ../../pkzip.sml
 	mlton catzip.mlb
 
 catzip.sml: catzip.sml.in
